@@ -1413,89 +1413,96 @@ let print_tags ppf fields =
       fprintf ppf "`%s" t;
       List.iter (fun (t, _) -> fprintf ppf ",@ `%s" t) fields
 
-let has_explanation t3 t4 =
+let explanation unif t3 t4 : (Format.formatter -> unit) option =
   match t3.desc, t4.desc with
-    Tfield _, (Tnil|Tconstr _) | (Tnil|Tconstr _), Tfield _
-  | Tnil, Tconstr _ | Tconstr _, Tnil
-  | _, Tvar _ | Tvar _, _
-  | Tvariant _, Tvariant _ -> true
-  | Tfield (l,_,_,{desc=Tnil}), Tfield (l',_,_,{desc=Tnil}) -> l = l'
-  | _ -> false
+  | Ttuple [], Tvar _ | Tvar _, Ttuple [] ->
+      Some (fun ppf ->
+        fprintf ppf "@,Self type cannot escape its class")
+  | Tconstr (p, _, _), Tvar _
+    when unif && t4.level < Path.binding_time p ->
+      Some (fun ppf ->
+        fprintf ppf
+          "@,@[The type constructor@;<1 2>%a@ would escape its scope@]"
+          path p)
+  | Tvar _, Tconstr (p, _, _)
+    when unif && t3.level < Path.binding_time p ->
+      Some (fun ppf ->
+        fprintf ppf
+          "@,@[The type constructor@;<1 2>%a@ would escape its scope@]"
+          path p)
+  | Tvar _, Tunivar _ | Tunivar _, Tvar _ ->
+      Some (fun ppf ->
+        fprintf ppf "@,The universal variable %a would escape its scope"
+          type_expr (if is_Tunivar t3 then t3 else t4))
+  | Tvar _, _ | _, Tvar _ ->
+      Some (fun ppf ->
+        let t, t' = if is_Tvar t3 then (t3, t4) else (t4, t3) in
+        if occur_in Env.empty t t' then
+          fprintf ppf "@,@[<hov>The type variable %a occurs inside@ %a@]"
+            type_expr t type_expr t'
+        else
+          fprintf ppf "@,@[<hov>This instance of %a is ambiguous:@ %s@]"
+            type_expr t'
+            "it would escape the scope of its equation")
+  | Tfield (lab, _, _, _), _ when lab = dummy_method ->
+      Some (fun ppf ->
+        fprintf ppf
+          "@,Self type cannot be unified with a closed object type")
+  | _, Tfield (lab, _, _, _) when lab = dummy_method ->
+      Some (fun ppf ->
+        fprintf ppf
+          "@,Self type cannot be unified with a closed object type")
+  | Tfield (l,_,_,{desc=Tnil}), Tfield (l',_,_,{desc=Tnil}) when l = l' ->
+      Some (fun ppf ->
+        fprintf ppf "@,Types for method %s are incompatible" l)
+  | (Tnil|Tconstr _), Tfield (l, _, _, _) ->
+      Some (fun ppf ->
+        fprintf ppf
+          "@,@[The first object type has no method %s@]" l)
+  | Tfield (l, _, _, _), (Tnil|Tconstr _) ->
+      Some (fun ppf ->
+        fprintf ppf
+          "@,@[The second object type has no method %s@]" l)
+  | Tnil, Tconstr _ | Tconstr _, Tnil ->
+      Some (fun ppf ->
+        fprintf ppf
+          "@,@[The %s object type has an abstract row, it cannot be closed@]"
+          (if t4.desc = Tnil then "first" else "second"))
+  | Tvariant row1, Tvariant row2 ->
+      Some (fun ppf ->
+        let row1 = row_repr row1 and row2 = row_repr row2 in
+        begin match
+          row1.row_fields, row1.row_closed, row2.row_fields, row2.row_closed with
+        | [], true, [], true ->
+            fprintf ppf "@,These two variant types have no intersection"
+        | [], true, (_::_ as fields), _ ->
+            fprintf ppf
+              "@,@[The first variant type does not allow tag(s)@ @[<hov>%a@]@]"
+              print_tags fields
+        | (_::_ as fields), _, [], true ->
+            fprintf ppf
+              "@,@[The second variant type does not allow tag(s)@ @[<hov>%a@]@]"
+              print_tags fields
+        | [l1,_], true, [l2,_], true when l1 = l2 ->
+            fprintf ppf "@,Types for tag `%s are incompatible" l1
+        | _ -> ()
+        end)
+  | _ ->
+      None
 
-let rec mismatch = function
+let rec mismatch unif = function
     (_, t) :: (_, t') :: rem ->
-      begin match mismatch rem with
+      begin match mismatch unif rem with
         Some _ as m -> m
-      | None ->
-          if has_explanation t t' then Some(t,t') else None
+      | None -> explanation unif t t'
       end
   | [] -> None
   | _ -> assert false
 
-let explanation unif t3 t4 ppf =
-  match t3.desc, t4.desc with
-  | Ttuple [], Tvar _ | Tvar _, Ttuple [] ->
-      fprintf ppf "@,Self type cannot escape its class"
-  | Tconstr (p, _, _), Tvar _
-    when unif && t4.level < Path.binding_time p ->
-      fprintf ppf
-        "@,@[The type constructor@;<1 2>%a@ would escape its scope@]"
-        path p
-  | Tvar _, Tconstr (p, _, _)
-    when unif && t3.level < Path.binding_time p ->
-      fprintf ppf
-        "@,@[The type constructor@;<1 2>%a@ would escape its scope@]"
-        path p
-  | Tvar _, Tunivar _ | Tunivar _, Tvar _ ->
-      fprintf ppf "@,The universal variable %a would escape its scope"
-        type_expr (if is_Tunivar t3 then t3 else t4)
-  | Tvar _, _ | _, Tvar _ ->
-      let t, t' = if is_Tvar t3 then (t3, t4) else (t4, t3) in
-      if occur_in Env.empty t t' then
-        fprintf ppf "@,@[<hov>The type variable %a occurs inside@ %a@]"
-          type_expr t type_expr t'
-      else
-        fprintf ppf "@,@[<hov>This instance of %a is ambiguous:@ %s@]"
-          type_expr t'
-          "it would escape the scope of its equation"
-  | Tfield (lab, _, _, _), _ when lab = dummy_method ->
-      fprintf ppf
-        "@,Self type cannot be unified with a closed object type"
-  | _, Tfield (lab, _, _, _) when lab = dummy_method ->
-      fprintf ppf
-        "@,Self type cannot be unified with a closed object type"
-  | Tfield (l,_,_,{desc=Tnil}), Tfield (l',_,_,{desc=Tnil}) when l = l' ->
-      fprintf ppf "@,Types for method %s are incompatible" l
-  | (Tnil|Tconstr _), Tfield (l, _, _, _) ->
-      fprintf ppf
-        "@,@[The first object type has no method %s@]" l
-  | Tfield (l, _, _, _), (Tnil|Tconstr _) ->
-      fprintf ppf
-        "@,@[The second object type has no method %s@]" l
-  | Tnil, Tconstr _ | Tconstr _, Tnil ->
-      fprintf ppf
-        "@,@[The %s object type has an abstract row, it cannot be closed@]"
-        (if t4.desc = Tnil then "first" else "second")
-  | Tvariant row1, Tvariant row2 ->
-      let row1 = row_repr row1 and row2 = row_repr row2 in
-      begin match
-        row1.row_fields, row1.row_closed, row2.row_fields, row2.row_closed with
-      | [], true, [], true ->
-          fprintf ppf "@,These two variant types have no intersection"
-      | [], true, (_::_ as fields), _ ->
-          fprintf ppf
-            "@,@[The first variant type does not allow tag(s)@ @[<hov>%a@]@]"
-            print_tags fields
-      | (_::_ as fields), _, [], true ->
-          fprintf ppf
-            "@,@[The second variant type does not allow tag(s)@ @[<hov>%a@]@]"
-            print_tags fields
-      | [l1,_], true, [l2,_], true when l1 = l2 ->
-          fprintf ppf "@,Types for tag `%s are incompatible" l1
-      | _ -> ()
-      end
-  | _ -> ()
-
+let explain mis ppf =
+  match mis with
+  | None -> ()
+  | Some explain -> explain ppf
 
 let warn_on_missing_def env ppf t =
   match t.desc with
@@ -1509,11 +1516,6 @@ let warn_on_missing_def env ppf t =
            in path.@]" path p
     end
   | _ -> ()
-
-let explanation unif mis ppf =
-  match mis with
-    None -> ()
-  | Some (t3, t4) -> explanation unif t3 t4 ppf
 
 let ident_same_name id1 id2 =
   if Ident.equal id1 id2 && not (Ident.same id1 id2) then begin
@@ -1543,7 +1545,7 @@ let unification_error env unif tr txt1 ppf txt2 =
   reset ();
   trace_same_names tr;
   let tr = List.map (fun (t, t') -> (t, hide_variant_name t')) tr in
-  let mis = mismatch tr in
+  let mis = mismatch unif tr in
   match tr with
   | [] | _ :: [] -> assert false
   | t1 :: t2 :: tr ->
@@ -1562,7 +1564,7 @@ let unification_error env unif tr txt1 ppf txt2 =
         txt1 (type_expansion t1) t1'
         txt2 (type_expansion t2) t2'
         (trace false "is not compatible with type") tr
-        (explanation unif mis);
+        (explain mis);
       if env <> Env.empty
       then begin
         warn_on_missing_def env ppf t1;
@@ -1598,10 +1600,10 @@ let report_subtyping_error ppf env tr1 txt1 tr2 =
     and tr2 = List.map prepare_expansion tr2 in
     fprintf ppf "@[<v>%a" (trace true (tr2 = []) txt1) tr1;
     if tr2 = [] then fprintf ppf "@]" else
-    let mis = mismatch tr2 in
+    let mis = mismatch true tr2 in
     fprintf ppf "%a%t@]"
       (trace false (mis = None) "is not compatible with type") tr2
-      (explanation true mis))
+      (explain mis))
 
 let report_ambiguous_type_error ppf env (tp0, tp0') tpl txt1 txt2 txt3 =
   wrap_printing_env env (fun () ->
